manifests/prod/error-pages/01-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages-middleware
  namespace: error-pages-namespace
spec:
  errors:
    status:
      - "400-599"
    service:
      name: error-pages-service
      port: 80
    query: /{status}.html
